Prototyped Altar of the Sun, began working on Sunstone tools

--- a/src/main/resources/assets/spicyrunes/lang/en_us.lang
+++ b/src/main/resources/assets/spicyrunes/lang/en_us.lang
@@ -1,2 +1,5 @@
 tile.bottledsunshine.name=Bottled Sunshine
 tile.sunstone_bricks.name=Sunstone Bricks
+tile.sunstone_cables.name=Sunstone Cable
+tile.empty_bottle.name=Empty Bottle (TEMP NAME)
+tile.sun_statue.name=Sun Statue
